--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+        <activity
+            android:name=".ActivityList"
+            android:label="Words tokenized"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".ActivityDetail"
+            android:label="Single Words"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".FileList"
+            android:label="Filelist"
+            android:screenOrientation="portrait"/>
 
+    </application>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
 </manifest>
