--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,11 @@
             android:label="Filelist"
             android:screenOrientation="portrait"/>
 
+        <activity android:name=".ActivityMywordDetail"
+            android:label="My Words"
+            android:screenOrientation="portrait">
+        </activity>
     </application>
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
 </manifest>
